# everida

./: .gitignore  pyproject.toml
docs/: MVP_PLAN.md  PRD.md  TECH_STACK.md
raw/: 120078_N_1_1.sql  【已评审需规】120078-未来星年金保险（分红.docx  产品配置模板.xlsx  需求池.md
src/everida/: __init__.py  api.py  cli.py  schemas.py  tasks.py
src/everida.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/everida/agents/: __init__.py  document.py  product.py
src/everida/tools/: __init__.py  sql.py
tests/: test_cli_api.py  test_document_agent.py  test_product_agent.py
